[project]
name = "on-off-hours"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "psycopg>=3.2.6",
    "psycopg2>=2.9.10",
    "pyqt5>=5.15.11",
    "schedule>=1.2.2",
]
